configs/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nj-playground-angular-service
  labels:
    app: nj-playground-angular
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: nj-playground-angular
