configs/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
      - http:
          paths:
            - pathType: Prefix
              path: /?(.*)
              backend:
                service:
                  name: nj-playground-angular-service
                  port:
                    number: 80
            - pathType: Prefix
              path: /api/?(.*)
              backend:
                service:
                  name: nj-playground-spring-service
                  port:
                    number: 8080
